k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soc-ingress
  annotations:
    # On garde le rewrite-target car c'est lui qui gère la redirection vers /logs
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  # Remplacer l'annotation deprecated par ceci :
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      # Route pour le Backend : /api/logs devient /logs
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 80
      # Route pour le Frontend : tout le reste
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
